--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,11 +1,10 @@
 [app]
 app1 ansible_host=192.168.56.171
 
-[dbsrv]
+[mongodb]
 dbsrv1 ansible_host=192.168.56.191
 dbsrv2 ansible_host=192.168.56.192
 dbsrv3 ansible_host=192.168.56.193
 
 [proxy]
 proxy1 ansible_host=192.168.56.181
-
