--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -7,8 +7,9 @@ services:
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-
+      MONGO_INITDB_ROOT_PASSWORD: admin1
+    ports:
+      - 27017:27017
   mongo-express:
     image: mongo-express
     restart: always
@@ -16,6 +17,6 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin1
+      ME_CONFIG_MONGODB_URL: mongodb://root:admin1@mongo:27017/
       ME_CONFIG_BASICAUTH: false
