--- a/playbooks/install_mongod.yaml
+++ b/playbooks/install_mongod.yaml
@@ -1,4 +1,4 @@
-- name: Configurer et optimiser un serveur MongoDB serveur / Mongos / Mongo shel
+- name: Configurer et optimiser un serveur MongoDB serveur / Mongos / Mongo shell
   hosts: "{{ target|default('dbsrv') }}"
   #vars:
 
@@ -17,16 +17,16 @@
 
     - name: "MongoDB | Télécharger la clé GPG de MongoDB"
       ansible.builtin.get_url:
-        url: https://www.mongodb.org/static/pgp/server-8.0.asc
-        dest: /tmp/mongodb-server-8.0.asc
+        url: https://www.mongodb.org/static/pgp/server-7.0.asc
+        dest: /tmp/mongodb-server-7.0.asc
         mode: '0644'
       tags: mongodb
 
     - name: "MongoDB | Installer la clé GPG de MongoDB"
       ansible.builtin.shell: |
-        gpg --dearmor < /tmp/mongodb-server-8.0.asc | sudo tee /usr/share/keyrings/mongodb-server-8.0.gpg > /dev/null
+        gpg --dearmor < /tmp/mongodb-server-7.0.asc | sudo tee /usr/share/keyrings/mongodb-server-7.0.gpg > /dev/null
       args:
-        creates: /usr/share/keyrings/mongodb-server-8.0.gpg
+        creates: /usr/share/keyrings/mongodb-server-7.0.gpg
       tags: mongodb
 
     # =================================================================
@@ -40,7 +40,7 @@
 
     - name: "MongoDB | Ajouter le référentiel MongoDB"
       ansible.builtin.apt_repository:
-        repo: "deb [ arch=amd64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/8.0 multiverse"
+        repo: "deb [ arch=amd64 signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse"
         state: present
         update_cache: yes
       tags: mongodb
