Refactor Docker installation playbook to use dynamic host targeting and remove hardcoded sudo privileges

--- a/playbooks/install_docker.yaml
+++ b/playbooks/install_docker.yaml
@@ -1,7 +1,6 @@
 ---
 - name: Installer Docker Engine sur Ubuntu
-  hosts: your_ubuntu_servers # Remplacez par votre groupe d'hôtes ou l'adresse IP de votre serveur
-  become: yes # Exécuter les tâches avec les privilèges sudo
+  hosts: "{{ target | default('all') }}"
 
   tasks:
     - name: Désinstaller les anciennes versions de Docker (si elles existent)
