Refactor MongoDB installation playbook: update GPG key URL and repository references to version 8.0

--- a/playbooks/install_mongod.yaml
+++ b/playbooks/install_mongod.yaml
@@ -32,12 +32,12 @@
     # =================================================================
     # 2. Installation de MongoDB
   
-    - name: "Remove binaires"
-      apt:
-        name: "mongodb-org*"
-        state: absent
-      tags: mongodb
-      fail_when: false
+    # - name: "Remove binaires"
+    #   apt:
+    #     name: "mongodb-org*"
+    #     state: absent
+    #   tags: mongodb
+    #   fail_when: false
 
     - name: "MongoDB | Ajouter le référentiel MongoDB"
       ansible.builtin.apt_repository:
