--- a/playbooks/install_mongod.yaml
+++ b/playbooks/install_mongod.yaml
@@ -37,7 +37,7 @@
     #     name: "mongodb-org*"
     #     state: absent
     #   tags: mongodb
-    #   fail_when: false
+    #   failed_when: false
 
     - name: "MongoDB | Ajouter le référentiel MongoDB"
       ansible.builtin.apt_repository:
