feat: Add MongoDB configuration file and update docker-compose to use it

--- a/docker/sharded/docker-compose.yml
+++ b/docker/sharded/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       mongod --configsvr --replSet configReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
@@ -16,6 +17,7 @@ services:
     volumes:
       - ./data/config1:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
       - ./init-scripts:/docker-entrypoint-initdb.d
     networks:
       - ${MONGO_NETWORK}
@@ -28,12 +30,14 @@ services:
       mongod --configsvr --replSet configReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${CONFIG_PORT_2}:27017"
     volumes:
       - ./data/config2:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -47,12 +51,14 @@ services:
       mongod --configsvr --replSet configReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${CONFIG_PORT_3}:27017"
     volumes:
       - ./data/config3:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -67,12 +73,14 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD1_PORT_1}:27017"
     volumes:
       - ./data/shard1-1:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -84,12 +92,14 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD1_PORT_2}:27017"
     volumes:
       - ./data/shard1-2:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -103,12 +113,14 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD1_PORT_3}:27017"
     volumes:
       - ./data/shard1-3:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -123,12 +135,14 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD2_PORT_1}:27017"
     volumes:
       - ./data/shard2-1:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -140,12 +154,14 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD2_PORT_2}:27017"
     volumes:
       - ./data/shard2-2:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -159,12 +175,14 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+      --config /etc/mongod.conf
       --auth
     ports:
       - "${SHARD2_PORT_3}:27017"
     volumes:
       - ./data/shard2-3:/data/db
       - ./data/keyfile:/data/keyfile:ro
+      - ./data/mongod.conf:/etc/mongod.conf:ro
     networks:
       - ${MONGO_NETWORK}
     restart: unless-stopped
@@ -188,6 +206,12 @@ services:
       - ${MONGO_NETWORK}
     restart: unless-stopped
     depends_on:
+      - config-server-1
+      - shard1-replica-1
+      - shard2-replica-1
+      - config-server-2
+      - shard1-replica-2
+      - shard2-replica-2
       - config-server-3
       - shard1-replica-3
       - shard2-replica-3
