--- a/docker/sharded/docker-compose.yml
+++ b/docker/sharded/docker-compose.yml
@@ -230,11 +230,7 @@ services:
       - ${MONGO_NETWORK}
     depends_on:
       - mongos-router-2
-    command: >
-      echo "JMR" && \
-      sleep 30 && \
-      mongosh --host mongos-router-1:27017 -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} --authenticationDatabase admin /scripts/init-replica-sets.js  && \
-      mongosh --host mongos-router-1:27017 -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} --authenticationDatabase admin /scripts/init-users.js
+    command: ["sh", "/scripts/init-cluster.sh"]
 networks:
   mongodb-sharded-network:
     driver: bridge
