fix: Remove exclamation marks from passwords in environment variables and initialization scripts for consistency

--- a/docker/sharded/docker-compose.yml
+++ b/docker/sharded/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${CONFIG_PORT_1}:27017"
     volumes:
@@ -25,6 +28,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${CONFIG_PORT_2}:27017"
     volumes:
@@ -44,6 +50,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${CONFIG_PORT_3}:27017"
     volumes:
@@ -65,6 +74,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD1_PORT_1}:27017"
     volumes:
@@ -82,6 +94,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD1_PORT_2}:27017"
     volumes:
@@ -101,6 +116,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD1_PORT_3}:27017"
     volumes:
@@ -121,6 +139,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_1}:27017"
     volumes:
@@ -138,6 +159,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_2}:27017"
     volumes:
@@ -157,6 +181,9 @@ services:
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
       --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_3}:27017"
     volumes:
@@ -176,6 +203,9 @@ services:
       mongos --configdb configReplSet/config-server-1:27017,config-server-2:27017,config-server-3:27017
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGOS_PORT_1}:27017"
     volumes:
@@ -202,6 +232,9 @@ services:
       mongos --configdb configReplSet/config-server-1:27017,config-server-2:27017,config-server-3:27017
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGOS_PORT_2}:27017"
     volumes:
