--- a/docker/sharded/.env_example
+++ b/docker/sharded/.env_example
@@ -1,13 +1,13 @@
 # Variables de configuration MongoDB
 MONGO_VERSION=7.0
 MONGO_INITDB_ROOT_USERNAME=root
-MONGO_INITDB_ROOT_PASSWORD=SuperSecurePassword123!
+MONGO_INITDB_ROOT_PASSWORD=SuperSecurePassword123
 
 # Utilisateurs personnalisés
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=AdminPassword123!
+ADMIN_PASSWORD=AdminPassword123
 SUPERADMIN_USERNAME=superadmin
-SUPERADMIN_PASSWORD=SuperAdminPassword123!
+SUPERADMIN_PASSWORD=SuperAdminPassword123
 
 # Configuration réseau
 MONGO_NETWORK=mongodb-sharded-network
